[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/bvh_spatial.gd" type="Script" id=1]
[ext_resource path="res://scene/main.gd" type="Script" id=2]
[ext_resource path="res://ui.theme" type="Theme" id=3]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 1000, 1000 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.376471, 0.376471, 0.376471, 1 )

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.12549, 0.12549, 0.12549, 1 )
ambient_light_color = Color( 0.988235, 0.988235, 0.988235, 1 )
ambient_light_energy = 0.25

[node name="main" type="Spatial"]
script = ExtResource( 2 )

[node name="BVHSpatial" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BVHSpatial"]

[node name="floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")
material/0 = SubResource( 3 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 500, 0 )
shadow_enabled = true
shadow_bias = 10.0
spot_range = 1000.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="cam_axis" type="Spatial" parent="."]

[node name="cam" type="Camera" parent="cam_axis"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 500 )
v_offset = 100.0
current = true
fov = 60.0
far = 2500.0

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_editor_description_": ""
}

[node name="lbl_motion_name" type="Label" parent="ui"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -496.0
margin_top = 48.0
margin_right = 496.0
margin_bottom = 80.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_scale" type="Label" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 80.0
margin_right = -16.0
margin_bottom = 112.0
text = "Scale"
align = 1
valign = 1

[node name="slider_scale" type="HSlider" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 112.0
margin_right = -16.0
margin_bottom = 128.0
hint_tooltip = "1.000"
max_value = 4.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_cube_size" type="Label" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 136.0
margin_right = -16.0
margin_bottom = 168.0
text = "Cube Size"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_cube_size" type="HSlider" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 168.0
margin_right = -16.0
margin_bottom = 184.0
hint_tooltip = "5"
min_value = 5.0
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_floor" type="CheckButton" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 192.0
margin_right = -16.0
margin_bottom = 240.0
focus_mode = 0
pressed = true
text = "Floor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_lighting" type="CheckButton" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 240.0
margin_right = -16.0
margin_bottom = 288.0
focus_mode = 0
pressed = true
text = "Light"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_shadow" type="CheckButton" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 288.0
margin_right = -16.0
margin_bottom = 336.0
focus_mode = 0
pressed = true
text = "Shadow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_camera_reset" type="Button" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 352.0
margin_right = -16.0
margin_bottom = 384.0
focus_mode = 0
text = "Camera Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chk_loop" type="CheckBox" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -336.0
margin_top = 352.0
margin_right = -272.0
margin_bottom = 384.0
focus_mode = 0
text = "Loop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bvh_file" type="ItemList" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -336.0
margin_top = 392.0
margin_right = -16.0
margin_bottom = -16.0
theme = ExtResource( 3 )

[node name="btn_anim_player" type="Button" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -48.0
margin_right = 80.0
margin_bottom = -16.0
focus_mode = 0
toggle_mode = true
text = "Play"

[node name="slider_anim" type="HSlider" parent="ui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = -48.0
margin_right = -464.0
margin_bottom = -16.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_sequence" type="Label" parent="ui"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -48.0
margin_right = -352.0
margin_bottom = -16.0
text = "0.000 / 0.000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="ui"]
margin_right = 768.0
margin_bottom = 384.0
rect_min_size = Vector2( 400, 140 )
theme = ExtResource( 3 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/"
current_path = "/"

[node name="list_adjust" type="ItemList" parent="ui"]
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 96.0
margin_right = 144.0
margin_bottom = -304.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adjust_x" type="HScrollBar" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -296.0
margin_right = 144.0
margin_bottom = -272.0
hint_tooltip = "0"
min_value = -180.0
max_value = 195.0
step = 15.0
page = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adjust_y" type="HScrollBar" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -264.0
margin_right = 144.0
margin_bottom = -240.0
hint_tooltip = "0"
min_value = -180.0
max_value = 195.0
step = 15.0
page = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adjust_z" type="HScrollBar" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -232.0
margin_right = 144.0
margin_bottom = -208.0
hint_tooltip = "0"
min_value = -180.0
max_value = 195.0
step = 15.0
page = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis_x" type="MenuButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -200.0
margin_right = 144.0
margin_bottom = -176.0
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis_y" type="MenuButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -168.0
margin_right = 144.0
margin_bottom = -144.0
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="axis_z" type="MenuButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -136.0
margin_right = 144.0
margin_bottom = -112.0
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_main" type="Panel" parent="ui"]
anchor_right = 1.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_File" type="MenuButton" parent="ui/menu_main"]
margin_right = 64.0
margin_bottom = 32.0
text = "File"
items = [ "Open BVH Folder...", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, true, 1, 0, null, "", true, "Import Adjust File...", null, 0, false, false, 2, 0, null, "", false, "Export Adjust File...", null, 0, false, false, 3, 0, null, "", false ]

[node name="AdjustFileDialog" type="FileDialog" parent="ui/menu_main/btn_File"]
margin_right = 768.0
margin_bottom = 384.0
rect_min_size = Vector2( 400, 140 )
theme = ExtResource( 3 )
access = 2
current_dir = "/"
current_path = "/"

[node name="timer_value_changed" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="value_changed" from="ui/slider_scale" to="." method="_on_slider_scale_value_changed"]
[connection signal="toggled" from="ui/btn_floor" to="." method="_on_btn_floor_toggled"]
[connection signal="toggled" from="ui/btn_lighting" to="." method="_on_btn_lighting_toggled"]
[connection signal="toggled" from="ui/btn_shadow" to="." method="_on_btn_shadow_toggled"]
[connection signal="pressed" from="ui/btn_camera_reset" to="." method="_on_btn_camera_reset_pressed"]
[connection signal="toggled" from="ui/chk_loop" to="." method="_on_chk_loop_toggled"]
[connection signal="item_selected" from="ui/bvh_file" to="." method="_on_bvh_file_item_selected"]
[connection signal="toggled" from="ui/btn_anim_player" to="." method="_on_btn_anim_player_toggled"]
[connection signal="value_changed" from="ui/slider_anim" to="." method="_on_slider_anim_value_changed"]
[connection signal="dir_selected" from="ui/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="item_selected" from="ui/list_adjust" to="." method="_on_list_adjust_item_selected"]
[connection signal="file_selected" from="ui/menu_main/btn_File/AdjustFileDialog" to="." method="_on_AdjustFileDialog_file_selected"]
[connection signal="timeout" from="timer_value_changed" to="." method="_on_timer_value_changed_timeout"]
